@@ -8,9 +8,6 @@ To be addressed in 7.19.4 (planned release: March 2009)
 218 - Senthil Raja Velu's "CURLOPT_LOCALPORT option broken", patch by 
       Markus Koetter
 
-219 - James Cheng's bug "How to detect missing Content-Length response header?"
-
-
 To be addressed in 7.19.5 (planned release: May 2009)
 =========================
 
