@@ -41,6 +41,8 @@ This release includes the following bugfixes:
    easily on transfer failures
  o compilation halting when using VS2008 to build a Windows 2000 target
  o ease creation of libcurl Mac OS X Framework
+ o CURLINFO_CONTENT_LENGTH_DOWNLOAD and CURLINFO_CONTENT_LENGTH_UPLOAD are -1
+   if unknown
 
 This release includes the following known bugs:
 
@@ -53,6 +55,6 @@ advice from friends like these:
  Peter Sylvester, Chad Monroe, Markus Moeller, Yang Tse, Scott Cantor,
  Patrick Scott, Hidemoto Nakada, Jocelyn Jaubert, Andre Guibert de Bruet,
  Kamil Dudka, Patrik Thunstrom, Linus Nielsen Feltzing, Mark Incley,
- Daniel Johnson
+ Daniel Johnson, James Cheng
 
         Thanks! (and sorry if I forgot to mention someone)
