@@ -6,6 +6,12 @@
 
                                   Changelog
 
+Daniel Stenberg (23 Feb 2009)
+- After a bug reported by James Cheng I've made curl_easy_getinfo() for
+  CURLINFO_CONTENT_LENGTH_DOWNLOAD and CURLINFO_CONTENT_LENGTH_UPLOAD return
+  -1 if the sizes aren't know. Previously these returned 0, make it impossible
+  to detect the difference between actually zero and unknown.
+
 Yang Tse (23 Feb 2009)
 - Daniel Johnson provided a shell script that will perform all the steps needed
   to build a Mac OS X fat ppc/i386 or ppc64/x86_64 libcurl.framework
